--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     package="de.thb.sparefood_app">
 
     <uses-permission android:name="android.permission.CAMERA"> </uses-permission>
+    <uses-feature android:name="android.hardware.camera" android:required="false"></uses-feature>
 
     <application
         android:allowBackup="true"
