--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="de.thb.sparefood_app">
 
-<!--    <uses-permission android:name="android.permission.CAMERA"> </uses-permission>-->
-    <uses-feature android:name="android.hardware.camera" android:required="false"></uses-feature>
+<!--    <uses-permission android:name="android.permission.CAMERA" android:required="true"/>-->
+    <uses-feature android:name="android.hardware.camera" android:required="true" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
@@ -28,6 +28,8 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths" />
         </provider>
+<!--            android:authorities="${applicationId}.fileprovider"-->
+<!--            android:authorities="com.example.android.fileprovider"-->
 
         <activity
             android:name=".MainActivity"
