--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.0'
     implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.9'
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.20'
 }
