--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,11 @@
             android:label="@string/app_name">
         </activity>
         <activity
+            android:name=".ui.login.LoginActivity"
+            android:exported="true"
+            android:theme="@style/Theme.MaterialComponents.NoActionBar">
+        </activity>
+        <activity
             android:name=".StartupActivity"
             android:exported="true"
             android:theme="@style/Theme.AppCompat.NoActionBar">
